# Django-React

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
backend/api/: admin.py  forms.py  managers.py  models.py  urls.py
backend/api/migrations/: 0001_initial.py
backend/api/tests/: test_users.py  test_views.py
backend/api/views/: users_views.py
backend/backend/: settings.py  urls.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js  setupTests.js
frontend/src/components/: Footer.jsx  Header.jsx
frontend/src/constants/: urls.js
frontend/src/mocks/: server.js
frontend/src/pages/HomePage/: HomePage.jsx
frontend/src/pages/LoginPage/: LoginPage.jsx
frontend/src/pages/RegisterPage/: RegisterPage.jsx
frontend/src/pages/RegisterPage/tests/: RegisterationPagePasswordComplexity.test.jsx  RegistrationPageEmail.test.jsx  RegistrationPageErrore.test.jsx  RegistrationPageLoading.test.jsx  RegistrationPageSubmitButton.test.jsx
frontend/src/pages/VerificationPage/: VerificationPage.jsx
frontend/src/pages/VerificationPage/tests/: VerificationPage.test.jsx
frontend/src/tests/: HappyPath.test.jsx
frontend/src/utilities/: checkEmail.js  checkPassword.js
